<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (c) 2014, 2015 Qualcomm Technologies Inc

All rights reserved.

Redistribution and use in source and binary forms, with or without modification,
are permitted (subject to the limitations in the disclaimer below) provided that
the following conditions are met:

Redistributions of source code must retain the above copyright notice, this list
of conditions and the following disclaimer.

Redistributions in binary form must reproduce the above copyright notice, this
list of conditions and the following disclaimer in the documentation and/or
other materials provided with the distribution.

Neither the name of Qualcomm Technologies Inc nor the names of its contributors
may be used to endorse or promote products derived from this software without
specific prior written permission.

NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<resources>

    <string name="app_name">FTC Robot Controller</string>
    <string name="ok">OK</string>
    <string name="legion_opener">Legion Config</string>

    <string name="pref_configure_robot_title">Robot Configuration Settings</string>
    <string name="configure_activity">Configure Robot</string>
    <string name="title_activity_wifi_channel_selector">Wifi Channel Selection</string>

    <string name="restart_robot_menu_item">Restart Robot</string>
    <string name="action_exit_app">Exit</string>
    <string name="about_menu_item">About</string>
    <string name="settings_activity">Settings</string>
    <string name="settings_menu_item">Settings</string>
    <string name="pref_hardware_config_filename">pref_hardware_config_filename</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_autoconfigure">Autoconfigure Robot</string>

    <!-- Fix Misconfigured Wifi Direct -->
    <string name="title_activity_config_wifi_direct">Configure Wifi Direct</string>

    <!-- View Logs -->
    <string name="view_logs_menu_item">View logs</string>
    <string name="action_view_logs">View logs</string>
    <string name="title_activity_view_logs">View Logs</string>
    <string name="button_text_clear_logs">Clear Logs</string>

    <!-- Preferences -->
    <string name="pref_launch_settings">pref_launch_settings</string>
    <string name="pref_change_wifi_channel">Change Wifi Channel</string>
    <string name="pref_launch_configure">pref_launch_configure</string>
    <string name="pref_launch_autoconfigure">pref_launch_autoconfigure</string>
    <string name="title_activity_configuration_opener">Legion Configuration Menu</string>

    <string name="hello_world">Hello world!</string>

    <!-- Legion Main Menu -->
    <string name="legion_menu_introduction">Welcome to Legion! Select a menu below to get started setting up.</string>
    <string name="legion_map_compiler_opener">Field Map Compiler</string>
    <string name="save_here_string">Save This</string>
    <!-- Field Map Compiler -->
    <string name="title_activity_map_compiler">Map Compiler</string>
    <string name="load_image">Load Map Image</string>
    <string name="update_map">Update Map</string>
    <string name="save_compile_map">Save and Compile</string>
    <string name="map_scale_hint">Map Resolution Scale</string>
    <string name="map_scale_tip">It is a good idea to scale down the navigation map (like a lower resolution picture) to
decrease the path finding time, however this does decrease the accuracy of Legion\'s navigation.</string>
    <string name="title_activity_velocity_config">Movement Detection Configuration</string>
    <!-- Movement Detection Configuration Strings -->
    <string name="wheel_radius_config_instruct">Enter the radius of the left and right wheels in centimeters.</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="cm">cm</string>
    <string name="wheel_circum_config_instruct">Alternatively, you can enter the circumference of the wheels or measure how far the
    robot has traveled after the motor of each wheel have completed rotating to the encoder value of 360. In centimeters of course.</string>
    <!-- Waypoint Config -->
    <string name="title_activity_waypoint_config">Waypoint Configuration</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="set_waypoint">Update Waypoint</string>
    <string name="save_all">Save All</string>
    <string name="waypoint_radius">Area (cm)</string>
    <string name="waypoint_name">Waypoint Name</string>
    <string name="update_save_warning">Remember to update the waypoint before moving on and save the
        waypoints before exiting.</string>
    <string name="add_waypoint">Add Waypoint</string>

</resources>
